2002-02-22  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextview.c (changed_handler): call
	gtk_size_group_queue_resize to avoid invalidating the widget every
	time its requisition changes. Instead we use the btree invalid
	lines to know what to redraw. Fixes #71429

Fri Feb 22 14:08:38 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkradiobutton.c, gtk/gtkcheckbutton.c, gtkbutton.h,
	gtktogglebutton.c: feedback when check and radio buttons are
	depressed.	

2002-02-22  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreeview.c (gtk_tree_view_set_reorderable):
	s/columns/rows/ in docs.  (#70199)

	* gtk/gtktreestore.c (gtk_tree_store_insert): s/before/after/ in 
	docs. (#71852, #68405)

	* gtk/gtkcalendar.c (gtk_calendar_select_day): Correct a comment.

Thu Feb 21 23:02:29 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.[ch]: add keynav handling for unselect all,
	focus column header, change focus with arrow keys in column headers,
	column reordering, column resizing, small try to fix page up/down
	(this fixes #70889, and fixes a great deal of #53580)

Thu Feb 21 16:51:17 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkaccelgroup.c (gtk_accelerator_valid): Add
	GDK_ISO_Next_Group/Prev_Group/Level3_Shift/
	First_Group/Last_Group to list of invalid accelerators.
	(A lot more that should be added, but probably would
	want a range mechanism. These are the ones found in
	the standard XFree86 config files.)

	* gtk/gtkbindings.c (gtk_bindings_activate): Fix problem
	that broke bindings for menus.

	* gtk/gtkwindow.[ch]: Export _gtk_window_activate_key()
	privately.

	* gtk/gtkmenushell.c (gtk_menu_shell_key_press): Use
	_gtk_window_activate_key(), gtk_bindings_activate_event().

Thu Feb 21 12:24:22 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkctree.c (gtk_ctree_class_init): Remove some workarounds
	for +/= and shift key handling.

Wed Feb 20 14:26:47 2002  Owen Taylor  <otaylor@redhat.com>
